hpcc4j-358 Fixed deprecated Constructors
Signed-off-by: Michael Gardner <Michael.Gardner@lexisnexisrisk.com>
Signed-off-by: Michael Gardner <michael.gardner@lexisnexisrisk.com>